# jazzer.js

./: .eslintignore  .eslintrc.json  .gitignore  .header.js  .npmignore  .npmrc  .prettierignore  .prettierrc.json  CONTRIBUTING.md  README.md  custom_hasher.js  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.jest.json  tsconfig.json
.config/: test-jazzerjsrc.json
.github/: dependabot.yml  release_template.md
.github/workflows/: datadog.yaml  dependabot.yaml  prerelease.yaml  release.yaml  run-all-tests-main.yaml  run-all-tests-pr.yaml  run-all-tests.yaml
.husky/: pre-commit
benchmarks/engine_smoke/: .gitignore  anomaly.js  anomaly_fuzz.js  fuzz.js  package.json  run.js
benchmarks/engine_smoke/seeds/: encoded.txt  nested.txt
docs/: README.md  architecture.md  bug-detectors.md  custom-hooks.md  development.md  fuzz-settings.md  fuzz-targets.md  jest-integration.md  migration-guide.md  release.md
end-to-end/: .jazzerjsrc  README.md  cli-smoke.cjs  integration.fuzz.ts  integration.test.ts  jest.config.ts  package-jazzer-js.sh  package.json  target.ts  tsconfig.json
example/: lib.js  vulnerable.js
example/spectral/: package-lock.json  package.json  spectral-example.js
examples/: .gitignore  dry_run.bat  dry_run.sh  package-jazzer-js.sh  remove-version.sed
examples/FuzzedDataProvider/: fuzz.js  package-lock.json  package.json
examples/bug-detectors/: fuzz.js  package.json
examples/bug-detectors-command-injection/: fuzz.js  package.json
examples/bug-detectors/command-injection/: custom-hooks.js  fuzz.js  package.json
examples/bug-detectors/path-traversal/: .gitignore  fuzz.js  package.json
examples/bug-detectors/prototype-pollution/: config.js  fuzz.js  package.json  userDict.txt
examples/bug-detectors/ssrf/: config.js  fuzz.js  package.json
examples/custom-hooks/: custom-hooks.js  fuzz.js  package-lock.json  package.json  readme.md
examples/done_callback/: fuzz.js  package-lock.json  package.json
examples/fuzzing_es6/: fuzz.js  package.json
examples/jest_integration/: .jazzerjsrc.json  foo.fuzz.js  foo.js  integration.fuzz.js  integration.test.js  package-lock.json  package.json  readme.md  target.js  worker.fuzz.js  workerGoldenReference.test.js
examples/jest_typescript_integration/: .jazzerjsrc  .jazzerjsrc.json  README.md  globals.d.ts  integration.fuzz.ts  integration.test.ts  jest.config.js  jest.config.ts  package.json  target.ts  tsconfig.json
examples/jpeg/: fuzz.js  package-lock.json  package.json
examples/jpeg_es6/: fuzz.js  package.json
examples/js-yaml/: fuzz.ts  package-lock.json  package.json  tsconfig.json
examples/maze/: fuzz.js  package-lock.json  package.json
examples/promise/: fuzz.js  package-lock.json  package.json
examples/protobufjs/: fuzz.js  package.json  protobufjs.fuzz.js  readme.md
examples/spectral/: package-lock.json  package.json  readme.md  spectral-example.js
examples/string_compare/: fuzz.js  lib.js  package-lock.json  package.json
examples/switch/: package-lock.json  package.json
examples/timeout/: fuzz.js  package-lock.json  package.json
examples/value_profiling/: fuzz.js  package-lock.json  package.json
examples/xml/: fuzz.js  package-lock.json  package.json
fuzzer/: .gitignore  CMakeLists.txt  README.md  fuzzer.js  fuzzy-eagle.cpp  package-lock.json  package.json  test_fuzzer.js
fuzztests/: .gitignore  .jazzerjsrc  FuzzedDataProvider.fuzz.js  core.fuzz.js  fuzzer.fuzz.js  instrument.fuzz.js  package.json  readme.md  runFuzzTests.js
scripts/: build-fuzzer.js  dry_run.bat  run_all.bat  run_all.sh  set-version.js  strip.js  test.sh
src/: index.ts  instrument.test.ts  instrument.ts  native.ts
src/instrument/: instrument.ts
src/instrument/plugins/: codeCoverage.test.ts  codeCoverage.ts  compareHooks.test.ts  compareHooks.ts  testhelpers.ts
tests/: helpers.js
tests/FuzzedDataProvider/: fuzz.js  package.json
tests/bug-detectors/: .gitignore  bug-detectors.test.js  code-injection.test.js  command-injection.test.js  general.test.js  helpers.js  package.json  path-traversal.test.js  prototype-pollution.test.js  remote-code-execution.test.js  ssrf.test.js
tests/bug-detectors/CommandInjection/: .jazzerjsrc.json  fuzz.js  tests.fuzz.js
tests/bug-detectors/code-injection/: context-a.fuzz.js  context-b.fuzz.js  disable-access.config.js  disable-invocation.config.js  fuzz.js  ignore-access-by-stack.config.js  ignore-heuristic-access.config.js  ignore-invocation-only.config.js  ignore-invocation.config.js  package.json  tests.fuzz.js
tests/code_coverage/: .gitignore  coverage.test.js  package.json
tests/done_callback/: fuzz.js  package.json
tests/engine/: engine.test.js  fuzz.js  package.json
tests/esm_cjs_mixed/: cjs-check.cjs  esm-check.mjs  esm_cjs_mixed.test.js  fuzz.mjs  package.json
tests/esm_instrumentation/: esm_instrumentation.test.js  fuzz-async.mjs  fuzz-lazy.mjs  fuzz.mjs  package.json  target.mjs
tests/fork_mode/: fuzz.js  package.json
tests/fuzz_the_fuzzer/: .jazzerjsrc.json  FuzzedDataProvider.fuzz.js  core.fuzz.js  fuzzedDataProvider.js  fuzzer.fuzz.js  instrument.fuzz.js  package.json
tests/jest_integration/: integration.test.js  package.json
tests/promise/: fuzz.js  package.json
tests/return_values/: package.json  return_values.test.js
tests/signal_handlers/: package.json  signal_handlers.test.js
tests/signal_handlers/native-signal/: CMakeLists.txt  index.ts  package.json  signal_impl.cpp  tsconfig.json
tests/string_compare/: fuzz.js  package.json
tests/switch/: fuzz.js  package.json
tests/timeout/: fuzz.js  package.json
tests/value_profiling/: fuzz.js  package.json
(+82 files in other folders)
